<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout_login_screen"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/front_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold|italic|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fadingEdge="horizontal"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textSize="20dp"
        android:textStyle="bold|italic|normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/signup_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold|italic|normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_view"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>




    <!--</LinearLayout>-->


